# Minecraft-Clone

./: .gitignore  README.md
client/: index.html  package.json  tsconfig.json
client/src/: chunkMesher.ts  config.ts  controls.ts  gui.ts  lights.ts  main.ts  objects.ts  scene.ts  style.css  world.ts
client/src/network/: connection.ts
client/src/player/: controls.ts  movement.ts  player.ts  remotePlayer.ts
client/src/scene/: dayNight.ts  lights.ts  scene.ts
client/src/ui/: chat.ts  gui.ts  hotbar.ts  hud.ts
client/src/world/: blocks.ts  chunk.ts  chunkManager.ts  chunkMesher.ts  coordinates.ts  greedyMesher.ts  webWorker.ts  world.ts  worldSetup.ts
server/: Cargo.toml
server/src/: chunk.rs  cli.rs  handler.rs  main.rs  protocol.rs  state.rs  world_registry.rs
